test\labels-ex2

--- a/labels-ex2/MANIFEST.yaml
+++ b/labels-ex2/MANIFEST.yaml
@@ -6,8 +6,10 @@ zdj7WVtjzgRfg4DT4PiriuLaNX7fyBoiRhbfKiz4FXB9QNXWy: !!set
 zdj7WbMNrJVMWJ4MWuBsiDd9m8xTrpyB66tSVmbfGXZMiStrw: !!set
   data/part-00000-2c0ad4ea-4e48-45da-8a78-b2c2b354179c-c000.snappy.parquet: null
 zdj7WgwqUQuQW99woEvavkKFRyowGmwwANRabG1cc1SZQfwN3: !!set
+  data/._SUCCESS - Copia.crc: null
   data/._SUCCESS.crc: null
 zdj7Whit1ECpnhvpfP6vtHBdBZEayjsb9R5Pujm7eXiq5gDND: !!set
+  data/.part-00000-17227ddc-d042-4f22-95a4-ad98ddb53640-c000.snappy.parquet - Copia.crc: null
   data/.part-00000-17227ddc-d042-4f22-95a4-ad98ddb53640-c000.snappy.parquet.crc: null
 zdj7WkXg9U6MKYNfRMoX8gc8tf5WsuFwoc9nSFubAYSRuakzH: !!set
   data/part-00000-17227ddc-d042-4f22-95a4-ad98ddb53640-c000.snappy.parquet: null
